--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "pinyin": "^2.9.0",
     "electron-debug": "3.0.1",
     "request": "^2.57.0",
-    "vue": "2.6.10"
+    "vue": "2.6.10",
+    "electron-packager": "14.0.4"
   },
   "devDependencies": {
-    "electron": "6.0.0",
-    "electron-packager": "14.0.4"
+    "electron": "6.0.0"
   },
   "main": "main.js",
   "scripts": {
-    "build": "electron-packager . 雪球助手 --out=build --overwrite --platform=darwin --arch=x64 --ignore=node_modules/electron --icon=images/Icon.icns",
+    "build": "electron-packager . 雪球助手 --out=build --overwrite --icon=images/Icon.icns",
     "start": "electron ."
   }
 }
